tests/ui/issues/issue-17373.stderr
error[E0614]: type `!` cannot be dereferenced
  --> $DIR/issue-17373.rs:2:5
   |
LL |     *return
   |     ^^^^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0614`.
